<resources>
    <string name="app_name">Marks Calculator</string>
    <string name="semester_marks">Semester Marks</string>
    <string name="year_wise_marks">Year-wise Marks</string>
    <string name="grade_percentage"><![CDATA[Grade ---> Percentage]]></string>
    <string name="percentage_grade"><![CDATA[Percentage ---> Grade]]></string>

    <string name="heading">Students Marks Calculator</string>
    <string name="student_name">Student Name</string>
    <string name="image">image</string>
    <string name="hintName">Raushan Kumar</string>
    <string name="sub_1">Sub-1</string>
    <string name="out_of_100">out of 100</string>
    <string name="sub_2">Sub-2</string>
    <string name="sub_3">Sub-3</string>
    <string name="sub_4">Sub-4</string>
    <string name="sub_5">Sub-5</string>
    <string name="sub_6">Sub-6</string>
    <string name="sub_7">Sub-7</string>
    <string name="sub_8">Sub-8</string>
    <string name="average">Average</string>
    <string name="_99">99%</string>
    <string name="grade">Grade</string>
    <string name="_10">10</string>
    <string name="calculate_your_marks">Calculate Your Marks</string>
    <string name="out_od_10">out of 10</string>
    <string name="hey">Hey</string>
    <string name="percentage">Percentage</string>
    <string name="your_total_marks">Your Total Marks</string>
    <string name="grade_point">Grade Point</string>
    <string name="_1st_year_marks">1st Year Marks</string>
    <string name="_2nd_year_marks">2nd Year Marks</string>
    <string name="_3rd_year_marks">3rd Year Marks</string>
    <string name="_4th_year_marks">4th Year Marks</string>
    <string name="in_age_please">In %age please</string>
    <string name="calculate_marks">Calculate Marks</string>
    <string name="your_result_is">Your Result is</string>
    <string name="performance">Performance</string>
    <string name="caculate_marks">CACULATE MARKS</string>
    <string name="todo">TODO</string>
    <string name="exit">Exit</string>
</resources>