<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SemesterMark2"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/hey"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/stname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:background="#E66397"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/totalMarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_total_marks"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="170dp"
            android:background="#020B2E"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/totalMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="210dp"
            android:background="#E89643"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/totalPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/percentage"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="320dp"
            android:background="#020B2E"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/totalPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="360dp"
            android:background="#E89643"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity=""
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/totalgpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/grade_point"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="470dp"
            android:background="#020B2E"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/totalGradePoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="510dp"
            android:background="#E89643"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>