<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".yearWise"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/year1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/_1st_year_marks"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/mark1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="In %age please"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="#E66397"
            android:textColor="@color/white"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <TextView
        android:id="@+id/year2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_2nd_year_marks"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="#020B2E"
        android:textColor="@color/white"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/mark2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="In %age please"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="#E66397"
            android:textColor="@color/white"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <TextView
        android:id="@+id/year3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_3rd_year_marks"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="#020B2E"
        android:textColor="@color/white"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/mark3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:hint="In %age please"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="#E66397"
            android:textColor="@color/white"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/year4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_4th_year_marks"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:background="#020B2E"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/mark4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:hint="In %age please"
            android:layout_marginTop="10dp"
            android:background="#E66397"
            android:textColor="@color/white"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickButton"
            android:text="Calculate Marks"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:background="#EFCB0A"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>